After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 724001 - gsubprocess: Fix a broken link in the documentation
gsubprocess: Fix a broken link in the documentation
Status: RESOLVED FIXED
Product: glib
Classification: Platform
Component: docs
unspecified
Other All
: Normal normal
: ---
Assigned To: gtkdev
gtkdev
Depends on:
Blocks:
 
 
Reported: 2014-02-10 08:22 UTC by Philip Withnall
Modified: 2014-02-10 10:02 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
gsubprocess: Fix a broken link in the documentation (1.03 KB, patch)
2014-02-10 08:22 UTC, Philip Withnall
committed Details | Review
gsubprocess: Fix ‘Since’ lines in documentation to read 2.40 (1.27 KB, patch)
2014-02-10 08:50 UTC, Philip Withnall
committed Details | Review

Description Philip Withnall 2014-02-10 08:22:29 UTC
Tiny patch attached: g_subprocess_wait() is the sync version. There is no g_subprocess_wait_sync().
Comment 1 Philip Withnall 2014-02-10 08:22:31 UTC
Created attachment 268638 [details] [review]
gsubprocess: Fix a broken link in the documentation
Comment 2 Philip Withnall 2014-02-10 08:50:40 UTC
Created attachment 268644 [details] [review]
gsubprocess: Fix ‘Since’ lines in documentation to read 2.40

GSubprocess was introduced in GLib 2.40, not 2.36.
Comment 3 Colin Walters 2014-02-10 09:12:56 UTC
Review of attachment 268644 [details] [review]:

Yes.
Comment 4 Colin Walters 2014-02-10 09:16:21 UTC
Review of attachment 268638 [details] [review]:

Right, thanks.
Comment 5 Philip Withnall 2014-02-10 10:00:28 UTC
Pushed to master!

Attachment 268638 [details] pushed as 24536dd - gsubprocess: Fix a broken link in the documentation
Comment 6 Philip Withnall 2014-02-10 10:01:59 UTC
Aaaargh, git-bz crashed. :'-(

Attachment 268644 [details] pushed as d173d97 - gsubprocess: Fix ‘Since’ lines in documentation to read 2.40