gsubprocess: Fix a broken link in the documentation

https://bugzilla.gnome.org/show_bug.cgi?id=724001